--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1743,7 +1743,7 @@ section {
 }
 
 #footer .footer-top .footer-contact p {
-    font-size: 14px;
+    font-size: 1em;
     line-height: 24px;
     margin-bottom: 0;
     font-family: "Jost", sans-serif;
