--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -566,43 +566,6 @@ section {
     left: calc(50% - 20px);
 }
 
-.section-judul {
-    text-align: center;
-    padding-bottom: 10px;
-}
-
-.section-judul h5 {
-    font-size: 1.2em;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-    position: relative;
-    color: #37517e;
-}
-
-.section-judul h5::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 120px;
-    height: 1px;
-    background: #ddd;
-    bottom: 1px;
-    left: calc(50% - 60px);
-}
-
-.section-judul h5::after {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 40px;
-    height: 3px;
-    background: #47b2e4;
-    bottom: 0;
-    left: calc(50% - 20px);
-}
-
 .section-title p {
     margin-bottom: 0;
 }
@@ -1886,5 +1849,14 @@ section {
     }
     #footer .credits {
         padding-top: 4px;
+    }
+    .section-title h2 {
+        font-size: 1.2em;
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-bottom: 1em;
+        padding-bottom: 1em;
+        position: relative;
+        color: #37517e;
     }
 }
