--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,7 +399,7 @@ h6 {
 
 #hero {
     width: 100%;
-    height: 80vh;
+    /* height: 80vh; */
     background: #37517e;
 }
 
@@ -467,7 +467,7 @@ h6 {
 
 @media (max-width: 991px) {
     #hero {
-        height: 100vh;
+        /* height: 100vh; */
         text-align: center;
     }
     #hero .animated {
@@ -483,7 +483,7 @@ h6 {
 
 @media (max-width: 768px) {
     #hero h1 {
-        font-size: 28px;
+        font-size: 1.4em;
         line-height: 36px;
     }
     #hero h2 {
