--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,3 @@
-/**
-* Template Name: Arsha
-* Updated: Aug 30 2023 with Bootstrap v5.3.1
-* Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
-
 body {
     font-family: 'Maven Pro', sans-serif !important;
     color: #444444;
@@ -114,6 +101,107 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 
+.img-bg {
+    height: 500px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    background-position: center center;
+}
+
+@media (max-width: 768px) {
+    .img-bg {
+        height: 400px;
+    }
+}
+
+.img-bg:before {
+    position: absolute;
+    content: "";
+    background: rgb(0, 0, 0);
+    background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
+    opacity: 0.5;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    top: 0;
+}
+
+.img-bg .img-bg-inner {
+    position: relative;
+    z-index: 2;
+    max-width: 700px;
+    position: relative;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-bottom: 50px;
+}
+
+@media (max-width: 768px) {
+    .img-bg .img-bg-inner {
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-bottom: 50px;
+    }
+}
+
+.img-bg .img-bg-inner h2,
+.img-bg .img-bg-inner p {
+    color: white;
+}
+
+@media (max-width: 500px) {
+    .img-bg .img-bg-inner p {
+        display: none;
+    }
+}
+
+.custom-swiper-button-next,
+.custom-swiper-button-prev {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 9;
+}
+
+@media (max-width: 768px) {
+    .custom-swiper-button-next,
+    .custom-swiper-button-prev {
+        display: none;
+    }
+}
+
+.custom-swiper-button-next span,
+.custom-swiper-button-prev span {
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.7);
+    transition: 0.3s all ease;
+}
+
+.custom-swiper-button-next:hover span,
+.custom-swiper-button-next:focus span,
+.custom-swiper-button-prev:hover span,
+.custom-swiper-button-prev:focus span {
+    color: rgba(255, 255, 255, 1);
+}
+
+.custom-swiper-button-next {
+    right: 40px;
+}
+
+.custom-swiper-button-prev {
+    left: 40px;
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+    background-color: rgba(255, 255, 255, 1);
+}
+
 #header {
     transition: all 0.5s;
     z-index: 997;
@@ -147,11 +235,6 @@ h6 {
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
-
-
-/**
-* Desktop Navigation 
-*/
 
 .navbar {
     padding: 0;
@@ -278,11 +361,6 @@ h6 {
         left: -100%;
     }
 }
-
-
-/**
-* Mobile Navigation 
-*/
 
 .mobile-nav-toggle {
     color: #fff;
