--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ h6 {
     padding: 10px 0 10px 30px;
     font-size: 15px;
     font-weight: 500;
-    color: #fff;
+    color: #212529;
     white-space: nowrap;
     transition: 0.3s;
 }
@@ -285,7 +285,7 @@ h6 {
     padding: 8px 20px;
     margin-left: 30px;
     border-radius: 50px;
-    color: #fff;
+    color: #212529;
     font-size: 14px;
     border: 2px solid #47b2e4;
     font-weight: 600;
