--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,7 @@ h6 {
 .img-bg .img-bg-inner h2,
 .img-bg .img-bg-inner p {
     color: white;
+    font-size: 1em;
 }
 
 @media (max-width: 500px) {
