--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -615,7 +615,6 @@ section {
 
 .section-title {
     text-align: center;
-    padding-bottom: 10px;
 }
 
 .section-title h2 {
@@ -856,9 +855,9 @@ section {
     .why-us .img {
         min-height: 400px;
     }
-    .why-us .content {
+    /* .why-us .content {
         padding-top: 30px;
-    }
+    } */
     .why-us .accordion-list {
         padding-bottom: 30px;
     }
