--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,6 +381,14 @@ h6 {
     color: #fff;
 }
 
+.header-scrolled .navbar a {
+    color: #fff;
+}
+
+.header-scrolled .getstarted {
+    color: #fff;
+}
+
 @media (max-width: 991px) {
     .mobile-nav-toggle {
         display: block;
