--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,7 +295,7 @@ h6 {
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
     color: #fff;
-    background: #31a9e1;
+    background-color: rgb(230 0 122/1);
 }
 
 .navbar .dropdown ul {
