--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,7 +207,7 @@ h6 {
     transition: all 0.5s;
     z-index: 997;
     padding: 15px 0;
-    background: #f2f2f2;
+    background-color: rgb(230 0 122/1);
 }
 
 #header.header-scrolled,
@@ -262,7 +262,7 @@ h6 {
     padding: 10px 0 10px 30px;
     font-size: 15px;
     font-weight: 500;
-    color: #212529;
+    color: #fff;
     white-space: nowrap;
     transition: 0.3s;
 }
@@ -286,7 +286,7 @@ h6 {
     padding: 8px 20px;
     margin-left: 30px;
     border-radius: 50px;
-    color: #212529;
+    color: #fff;
     font-size: 14px;
     border: 2px solid #47b2e4;
     font-weight: 600;
@@ -294,7 +294,7 @@ h6 {
 
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
-    color: #fff;
+    color: #47b2e4;
     background-color: rgb(230 0 122/1);
 }
 
