--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,7 +365,7 @@ h6 {
 }
 
 .mobile-nav-toggle {
-    color: #596d80;
+    color: #fff;
     font-size: 28px;
     cursor: pointer;
     display: none;
