--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -653,7 +653,7 @@ section {
     display: block;
     width: 40px;
     height: 3px;
-    background: #47b2e4;
+    background: rgb(230 0 122/1);
     bottom: 0;
     left: calc(50% - 20px);
 }
@@ -1525,8 +1525,8 @@ section {
 --------------------------------------------------------------*/
 
 .contact .info {
-    border-top: 3px solid #47b2e4;
-    border-bottom: 3px solid #47b2e4;
+    border-top: 3px solid rgb(230 0 122/1);
+    border-bottom: 3px solid rgb(230 0 122/1);
     padding: 30px;
     background: #fff;
     width: 100%;
