--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -610,7 +610,7 @@ h6 {
 --------------------------------------------------------------*/
 
 section {
-    padding: 60px 0;
+    padding: 3.2em 0 0 0;
     overflow: hidden;
 }
 
