--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,7 +324,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-    color: #47b2e4;
+    color: #000;
 }
 
 .navbar .getstarted,
