--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -992,9 +992,11 @@ section {
 
 .services .icon-box {
     box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+    color: #fff;
     padding: 50px 30px;
     transition: all ease-in-out 0.4s;
-    background: #fff;
+    --tw-bg-opacity: 1;
+    background-color: rgb(63 66 115/var(--tw-bg-opacity));
 }
 
 .services .icon-box .icon {
