--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1260,7 +1260,8 @@ section {
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
     padding: 30px;
     border-radius: 5px;
-    background: #fff;
+    --tw-bg-opacity: 1;
+    background-color: rgb(63 66 115/var(--tw-bg-opacity));
     transition: 0.5s;
     height: 100%;
 }
@@ -1287,7 +1288,7 @@ section {
     font-weight: 700;
     margin-bottom: 5px;
     font-size: 20px;
-    color: #37517e;
+    color: #fff;
 }
 
 .team .member span {
