--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -990,6 +990,24 @@ section {
 # Services
 --------------------------------------------------------------*/
 
+.icon-box-m {
+    box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+    color: #fff;
+    transition: all ease-in-out 0.4s;
+    --tw-bg-opacity: 1;
+    background-color: rgb(63 66 115/var(--tw-bg-opacity));
+}
+
+.icon-box-m .icon {
+    margin-bottom: 10px;
+}
+
+.icon-box-m .icon i {
+    color: #47b2e4;
+    font-size: 36px;
+    transition: 0.3s;
+}
+
 .icon-box {
     box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
     color: #fff;
@@ -999,11 +1017,11 @@ section {
     background-color: rgb(63 66 115/var(--tw-bg-opacity));
 }
 
-.services .icon-box .icon {
+.icon-box .icon {
     margin-bottom: 10px;
 }
 
-.services .icon-box .icon i {
+.icon-box .icon i {
     color: #47b2e4;
     font-size: 36px;
     transition: 0.3s;
